--- a/tweet/templates/index.html
+++ b/tweet/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="text-center  mt-4">Welcome to Rujit's Website</h1>
+  <h1 class="text-center  mt-4">Fuck you Rujit</h1>
   
 {% endblock %}
 
