--- a/tweet/templates/index.html
+++ b/tweet/templates/index.html
@@ -1,12 +1,5 @@
-{% extends "layout.html" %}
+{% extends "layout.html" %} {% block title %} Rujit's Page {% endblock %} {%
+block content %}
+<h1 class="text-center mt-4">Who let this outsider in ?</h1>
 
-{% block title %}
-  Rujit's Page
 {% endblock %}
-
-{% block content %}
-  <h1 class="text-center  mt-4">Fuck you Rujit</h1>
-  
-{% endblock %}
-
-
