--- a/tweet/templates/index.html
+++ b/tweet/templates/index.html
@@ -1,5 +1,12 @@
-{% extends "layout.html" %} {% block title %} Rujit's Page {% endblock %} {%
-block content %}
-<h1 class="text-center mt-4">Who let this outsider in ?</h1>
+{% extends "layout.html" %}
 
+{% block title %}
+  Rujit's Page
 {% endblock %}
+
+{% block content %}
+  <h1 class="text-center  mt-4">Fuck you Rujit</h1>
+  
+{% endblock %}
+
+
