--- a/tweet/templates/index.html
+++ b/tweet/templates/index.html
@@ -5,7 +5,8 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="text-center  mt-4">Fuck you Rujit</h1>
+  <h4 class="text-center  mt-4">Hello folks, this is your captain speaking, thank you for joining our deranged group for your journey today. We will be departing for our journey to hell shortly.Please remain seated and wear your seatbelts.
+  </h4>
   
 {% endblock %}
 
